fixing text contrast

--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@
 }
 
 body {
+  color: hwb(204 69% 20%);
   font-family: "Josefin Slab, serif";
   font-size: 1.5rem;
   text-rendering: optimizeSpeed;
@@ -23,16 +24,6 @@ body {
   body {
     font-size: 1rem;
   }
-}
-
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  color: #000;
-  text-shadow: -0.5px 0 0 #000;
 }
 
 h3 {
@@ -78,7 +69,7 @@ section:last-of-type {
 
 .panel__main {
   background-color: #393c43;
-  background-image: radial-gradient(circle at top left, #2d3143, transparent), radial-gradient(circle at top right, #161315, transparent), radial-gradient(circle at bottom right, #161513, transparent, transparent), radial-gradient(circle at bottom left, #0c0e0d, transparent, transparent), url(img/bgImg.jpg);
+  background-image: radial-gradient(circle at top left, hsl(229deg, 20%, 22%), transparent), radial-gradient(circle at top right, hsl(323deg, 9%, 8%), transparent), radial-gradient(circle at bottom right, hsl(51deg, 6%, 8%), transparent, transparent), radial-gradient(circle at bottom left, hsl(145deg, 9%, 5%), transparent, transparent), url(img/bgImg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
@@ -184,7 +175,7 @@ section:last-of-type {
   display: block;
   border-right: 0;
   border-radius: 10px 0 0 10px;
-  box-shadow: -2px 0 0 #325fb5;
+  box-shadow: -2px 0 0 rgb(50, 95, 181);
   margin: 6px 0;
   padding: 15px;
   transition: all 0.3s ease-in-out;
@@ -221,13 +212,13 @@ section:last-of-type {
   height: 17px;
   width: 8px;
   border-bottom-right-radius: 8px;
-  box-shadow: 0 7px 0 0 #1f2538;
+  box-shadow: 0 7px 0 0 hsl(225deg, 29%, 17%);
 }
 .panel__main .panel__main-side .list__links .active::before {
   content: "";
   background-color: transparent;
   border-top-right-radius: 8px;
-  box-shadow: 0 -7px 0 0 #1f2538;
+  box-shadow: 0 -7px 0 0 hsl(225deg, 29%, 17%);
   position: absolute;
   bottom: -16px;
   right: 0;
@@ -235,12 +226,12 @@ section:last-of-type {
   width: 8px;
 }
 .panel__main .panel__main-side .list__links a {
-  color: #325fb5;
+  color: rgb(50, 95, 181);
   text-decoration: none;
   transition: color 0.25s linear;
 }
 .panel__main .panel__main-side .list__links li:hover {
-  box-shadow: -2px 0 0 #5e6455;
+  box-shadow: -2px 0 0 rgb(94, 100, 85);
 }
 .panel__main .panel__main-side .list__links li:hover a {
   color: #ffffff;
@@ -434,7 +425,7 @@ section:last-of-type {
 }
 .panel__main .panel__main-content #home h1:hover {
   transform: translate(-1px, -1px);
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), -1px -1px 2px #292828, 2px 1px 2px rgba(0, 0, 0, 0.7);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), -1px -1px 2px rgb(41, 40, 40), 2px 1px 2px rgba(0, 0, 0, 0.7);
 }
 .panel__main .panel__main-content #home h1 span {
   display: table-cell;
@@ -564,7 +555,7 @@ section:last-of-type {
     color: #393c43;
   }
   10% {
-    color: #325fb4;
+    color: rgb(50, 95, 180);
   }
 }
 @keyframes light {
@@ -572,7 +563,7 @@ section:last-of-type {
     color: #393c43;
   }
   10% {
-    color: #325fb4;
+    color: rgb(50, 95, 180);
   }
 }
 .panel__main .panel__main-content #home .flip-box {
@@ -642,7 +633,7 @@ section:last-of-type {
   margin-top: -2px;
   outline: 0;
   border: 0;
-  box-shadow: 0px 2px 2px #516b5c;
+  box-shadow: 0px 2px 2px rgb(81, 107, 92);
   z-index: 1;
 }
 @media (max-width: 500px) {
@@ -654,7 +645,7 @@ section:last-of-type {
   font-family: "Josefin Slab", serif;
   font-size: calc(100% + 1vw);
   -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 0.5px #99aab5;
+  -webkit-text-stroke: 0.5px hwb(204 69% 20%);
   text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.1), 2px 2px 2px rgba(0, 0, 0, 0.5), 3px 3px 3px rgba(0, 0, 0, 0.8);
   padding-right: 0.2em;
   border-right: 3px solid #99aab5;
@@ -926,7 +917,7 @@ section:last-of-type {
   transform: translateY(-25px) translateX(10px) scale(0.75);
   transform-origin: 0 50%;
   color: inherit;
-  background-color: #4d505c;
+  background-color: hsl(228deg, 9%, 33%);
   /* background-image-size for making visible only the  border-bottom */
   background-size: 0px, 0px, 0px, calc(100% + 16px) 1px;
   border-bottom: 2px solid #6e48aa;
@@ -935,7 +926,7 @@ section:last-of-type {
   transform: translateY(-25px) translateX(10px) scale(0.75);
   transform-origin: 0 50%;
   color: inherit;
-  background-color: #4d505c;
+  background-color: hsl(228deg, 9%, 33%);
   /* background-image-size for making visible only the  border-bottom */
   background-size: 0px, 0px, 0px, calc(100% + 16px) 1px;
   border-bottom: 2px solid #6e48aa;
@@ -944,7 +935,7 @@ section:last-of-type {
   transform: translateY(-25px) translateX(10px) scale(0.75);
   transform-origin: 0 50%;
   color: inherit;
-  background-color: #4d505c;
+  background-color: hsl(228deg, 9%, 33%);
   /* background-image-size for making visible only the  border-bottom */
   background-size: 0px, 0px, 0px, calc(100% + 16px) 1px;
   border-bottom: 2px solid #6e48aa;
@@ -992,28 +983,28 @@ section:last-of-type {
           animation-play-state: running;
 }
 #contact textarea:not(:-moz-placeholder-shown) + label {
-  transform: translateY(-23px) translateX(10px) scale(0.75);
-  transform-origin: 0 50%;
   color: inherit;
-  background-color: #313840;
+  background-color: hsl(228deg, 9%, 33%);
   background-size: 0px, 0px, 0px, calc(100% + 16px) 1px;
   border-bottom: 2px solid #6e48aa;
+  transform: translateY(-23px) translateX(10px) scale(0.75);
+  transform-origin: 0 50%;
 }
 #contact textarea:not(:-ms-input-placeholder) + label {
-  transform: translateY(-23px) translateX(10px) scale(0.75);
-  transform-origin: 0 50%;
   color: inherit;
-  background-color: #313840;
+  background-color: hsl(228deg, 9%, 33%);
   background-size: 0px, 0px, 0px, calc(100% + 16px) 1px;
   border-bottom: 2px solid #6e48aa;
+  transform: translateY(-23px) translateX(10px) scale(0.75);
+  transform-origin: 0 50%;
 }
 #contact textarea:not(:placeholder-shown) + label {
-  transform: translateY(-23px) translateX(10px) scale(0.75);
-  transform-origin: 0 50%;
   color: inherit;
-  background-color: #313840;
+  background-color: hsl(228deg, 9%, 33%);
   background-size: 0px, 0px, 0px, calc(100% + 16px) 1px;
   border-bottom: 2px solid #6e48aa;
+  transform: translateY(-23px) translateX(10px) scale(0.75);
+  transform-origin: 0 50%;
 }
 #contact textarea:not(:-moz-placeholder-shown) {
   border: 1px solid #6e48aa;
@@ -1066,7 +1057,7 @@ section:last-of-type {
     font-size: 20vh;
     opacity: 1;
     transform: translateY(12vh);
-    color: #334977;
+    color: rgb(51, 73, 119);
   }
   100% {
     font-size: 1em;
@@ -1080,7 +1071,7 @@ section:last-of-type {
     font-size: 20vh;
     opacity: 1;
     transform: translateY(12vh);
-    color: #334977;
+    color: rgb(51, 73, 119);
   }
   100% {
     font-size: 1em;
@@ -1185,8 +1176,7 @@ section:last-of-type {
   position: relative;
   width: 100%;
   height: 15vh;
-  margin-bottom: -7px;
-  /*Fix for safari gap*/
+  margin-bottom: -7px; /*Fix for safari gap*/
   min-height: 100px;
   max-height: 150px;
 }
@@ -1242,7 +1232,7 @@ section:last-of-type {
 }
 
 footer {
-  background-color: #334977;
+  background-color: rgb(51, 73, 119);
   width: 82.15vw;
 }
 @media (max-width: 500px) {
@@ -1265,8 +1255,8 @@ footer .container {
   background-size: contain;
   -webkit-background-clip: text;
   background-clip: text;
-  -webkit-text-fill-color: rgba(51, 168, 215, 0.111);
-  -webkit-text-stroke: 0px rgba(0, 0, 0, 0.573);
+  -webkit-text-fill-color: hsla(197deg, 67%, 52%, 0.111);
+  -webkit-text-stroke: 0px hsla(0deg, 0%, 0%, 0.573);
   text-shadow: -3px 3px 2px rgba(0, 0, 0, 0.351);
 }
 @media (max-width: 960px) {
